force-app/main/default/objects/cdcpc__RD_Inlet_Gasket_Part_Number__c/cdcpc__RD_Inlet_Gasket_Part_Number__c.object-meta.xml
<CustomObject>
    <label>RDInletGasketPartNumber</label>
    <nameField>
        <label>RDInletGasketPartNumber</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDInletGasketPartNumber</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>