force-app/main/default/objects/cdcpc__RD_Inlet_Gasket_Part_Number__c/fields/cdcpc__AssyThickUL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__AssyThickUL__c</fullName>
    <label>AssyThickUL</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>