force-app/main/default/objects/cdcpc__RD_Inlet_Gasket_Part_Number__c/fields/cdcpc__DSCVAR__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DSCVAR__c</fullName>
    <label>DSCVAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>