force-app/main/default/objects/cdcpc__RD_Inlet_Gasket_Part_Number__c/fields/cdcpc__Scrap_Factor__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Scrap_Factor__c</fullName>
    <label>Scrap Factor%</label>
    <length>255</length>
    <type>Text</type>
</CustomField>