force-app/main/default/objects/cdcpc__RD_Inlet_Gasket_Part_Number__c/fields/cdcpc__TempLL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TempLL__c</fullName>
    <label>TempLL</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>