force-app/main/default/objects/cdcpc__RD_Inlet_Gasket_Part_Number__c/fields/cdcpc__Thickness__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Thickness__c</fullName>
    <label>Thickness</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>